fix(bainistigh): take care of some issues on mobile

--- a/apps/bainistigh/assets/css/live/wiki_live/_appendices_component.scss
+++ b/apps/bainistigh/assets/css/live/wiki_live/_appendices_component.scss
@@ -18,7 +18,8 @@
 // -----------------------------------------------------------------------------------------------
 
 .AppendicesComponent {
-  block-size: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 //
@@ -29,10 +30,11 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  padding: 8px;
+  padding: 64px 12px 12px 12px;
 
   @include media.ipad(min) {
     gap: 8px;
+    padding: 8px;
   }
 }
 
@@ -264,21 +266,32 @@
 .AppendicesComponent footer {
   @include box.bg(quaternary);
   @include border.block-start(secondary);
-  bottom: 0;
   display: flex;
-  gap: 8px;
+  gap: 12px;
   justify-content: center;
   left: 0;
-  padding: 6px;
+  padding: 12px;
   position: absolute;
   right: 0;
+  top: 0;
+
+  @include media.ipad(min) {
+    bottom: 0;
+    gap: 8px;
+    padding: 6px;
+    top: unset;
+  }
 }
 
 .AppendicesComponent footer button {
   @include box.bg(control);
-  @include text.style(sans, $color: tertiary, $size: 11px, $weight: 600);
+  @include text.style(sans, $color: tertiary, $size: 16px, $weight: 600);
   border-radius: 6px;
   padding: 4px 12px;
+
+  @include media.ipad(min) {
+    @include text.size(11px);
+  }
 
   &:hover {
     @include box.bg(emphasized);
