--- a/apps/bainistigh/assets/css/live/wiki_live/_editor_component.scss
+++ b/apps/bainistigh/assets/css/live/wiki_live/_editor_component.scss
@@ -56,12 +56,15 @@ section.wiki:has(.SidebarComponent > .toggle:not(:checked)) .EditorComponent {
 .EditorComponent [contenteditable="true"] {
   @include text.style(serif, $color: secondary, $size: 24px, $weight: 300);
   inline-size: 100%;
+  margin-inline: auto;
   max-inline-size: 72ch;
   outline: none;
   position: relative;
+  text-rendering: optimizelegibility;
 
   @include media.ipad(max) {
     font-size: 20px;
+    padding-block-end: 120px;
   }
 
   a {
@@ -108,9 +111,17 @@ section.wiki:has(.SidebarComponent > .toggle:not(:checked)) .EditorComponent {
     margin-top: 1em;
   }
 
-  p + p,
+  h2 {
+    font-size: 150%;
+    font-weight: 300;
+    margin: 0;
+  }
+
+  h2,
+  h2 + p,
   ol,
   ol + p,
+  p + p,
   ul,
   ul + p {
     margin-top: 1em;
