--- a/apps/bainistigh/assets/css/live/wiki_live/_metadata_component.scss
+++ b/apps/bainistigh/assets/css/live/wiki_live/_metadata_component.scss
@@ -17,9 +17,9 @@
 // Main container
 // -----------------------------------------------------------------------------------------------
 
-.MetadataComponent {
-  block-size: 100%;
-}
+// .MetadataComponent {
+//   block-size: 100%;
+// }
 
 //
 // Topic attributes
